# uci-mtb-results

./: .gitignore  LICENSE  README.md  app.py  export.ipynb  hello.py  pyproject.toml  scraper.py
