[project]
name = "uci-mtb-results"
version = "0.1.0"
description = "A python app built for scraping mountain bike race results from the UCI MTB website."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.1.3",
    "ipykernel>=6.29.5",
    "isodate>=0.7.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "selenium>=4.27.1",
]
